@@ -21,8 +21,12 @@ Build-Depends: debhelper-compat (= 12),
                meson (>= 0.48),
                libgirepository1.0-dev (>= 0.9.5),
                apache2 (>= 2.4) <!nocheck>,
-               php <!nocheck>,
+               libapache2-mod-php (>= 2:7) <!nocheck>,
+               libapache2-mod-php (<< 2:8) <!nocheck>,
+               php (>= 2:7) <!nocheck>,
+               php (<< 2:8) <!nocheck>,
                php-xmlrpc <!nocheck>,
+               python3,
                curl <!nocheck>,
                libnss-myhostname <!nocheck>,
                valac
